--- a/rate_Soft_Data_Integrity_Failures/docker-compose.yml
+++ b/rate_Soft_Data_Integrity_Failures/docker-compose.yml
@@ -1,8 +1,13 @@
 version: '3'
+
 services:
   web:
     build: .
     ports:
-      - "5000:5000"
+      - "9000:9000"
     volumes:
-      - ./app/uploads:/app/uploads
+      - ./app:/app
+    depends_on:
+      - redis
+  redis:
+    image: "redis:alpine"
