fixed xss container

--- a/rate_Injection_XSS/Dockerfile
+++ b/rate_Injection_XSS/Dockerfile
@@ -1,6 +1,10 @@
 FROM node:18
 WORKDIR /app
-COPY package*.json /app/
+COPY package*.json ./
 RUN npm install
 COPY . .
-CMD [ "node", "index.js" ]
+ENV PORT=2000
+ENV COOKIE_KEY=SECRET
+ENV FLAG=IR{B055_0F_X55}
+EXPOSE 2000
+CMD ["node", "index.js"]
